Bug 112239 - Icons missing for the not yet used commands in the new customize dialog
Summary: Icons missing for the not yet used commands in the new customize dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:6.1.0
Keywords: regression
Depends on:
Blocks: Customise-Dialog
  Show dependency treegraph
 
Reported: 2017-09-05 15:34 UTC by Regina Henschel
Modified: 2018-02-05 23:22 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Compare old and new dialog (123.30 KB, image/png)
2017-09-06 15:32 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-09-05 15:34:01 UTC
This is the behavior in the old customize dialog:
If you add a command, you can see all icons of the command.

In the new customize dialog in the left list the icons are missing.

Use cases for these icons:
You know the icon, because you have seen it e.g. in an English tutorial. You want to add this command in your installation. But your installation has non-English UI and you do not know the localized name of the command.
There exists to items with identical or similar command names and the icon helps to distinguish them.
Comment 1 Xisco Faulí 2017-09-06 15:02:58 UTC
Could you please explain the steps to reproduce it ?
Comment 2 Regina Henschel 2017-09-06 15:32:05 UTC
Created attachment 136071 [details]
Compare old and new dialog

I have marked the places in the screenshot.
Comment 3 Muhammet Kara 2017-09-10 19:29:10 UTC
(In reply to Regina Henschel from comment #0)
> This is the behavior in the old customize dialog:
> If you add a command, you can see all icons of the command.
> 
> In the new customize dialog in the left list the icons are missing.

The commands on the left aren't supposed to have icons according to the initial design.

> 
> Use cases for these icons:
> You know the icon, because you have seen it e.g. in an English tutorial. You
> want to add this command in your installation. But your installation has
> non-English UI and you do not know the localized name of the command.

We 'might' be able to add support for searching through uno command names directly along with the displayed names if that helps.

> There exists to items with identical or similar command names and the icon
> helps to distinguish them.

I have also added Heiko and Jay to the cc list as they are the ui/ux experts.

--
[0] https://docs.google.com/document/d/1IPXkYMmyXQzoVUdMpnBeoQdf-LNp5_oNaqfW6OFhxqA/edit
Comment 4 Heiko Tietze 2017-09-11 11:32:02 UTC
Too many icons are distracting. Don't see big advantage of showing the originally assigned icons in the list of available functions (.uno commands, macros, styles).
Comment 5 Yousuf Philips (jay) (retired) 2017-09-11 12:46:05 UTC
Yes icons should be there and were supposed to be there in my mockups.
Comment 6 Muhammet Kara 2017-09-11 18:58:11 UTC
(In reply to Yousuf Philips (jay) from comment #5)
> Yes icons should be there and were supposed to be there in my mockups.

Oh. Confused. So the icons were forgotten in the visual mockups, and they need to be added? (I had deliberately left them out to comply with the mockups.)
Comment 7 Yousuf Philips (jay) (retired) 2017-09-25 18:44:47 UTC
(In reply to Muhammet Kara from comment #6)
> Oh. Confused. So the icons were forgotten in the visual mockups, and they
> need to be added? (I had deliberately left them out to comply with the
> mockups.)

Yes they should be there just like before.
Comment 8 Xisco Faulí 2017-12-04 15:16:19 UTC
Still reproducible in

Version: 6.1.0.0.alpha0+
Build ID: 889c72a7e54f241342f42b1b0a05858902228cbc
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES-valencia (ca_ES.UTF-8); Calc: group threaded

@Muhammet, is it something that could be fixed before LibreOffice 6.0 is released ?
Comment 9 Muhammet Kara 2017-12-05 13:13:17 UTC
(In reply to Xisco Faulí from comment #8)
> Still reproducible in
> 
> Version: 6.1.0.0.alpha0+
> Build ID: 889c72a7e54f241342f42b1b0a05858902228cbc
> CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
> Locale: ca-ES-valencia (ca_ES.UTF-8); Calc: group threaded
> 
> @Muhammet, is it something that could be fixed before LibreOffice 6.0 is
> released ?

We will see. :)
Comment 10 Commit Notification 2018-02-05 23:20:40 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d6630ddc992f65975f4ad4fc4677a799e634fca1

tdf#112239: Add icons to customize dialog function tree

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.