tdf#112239: Add icons to customize dialog function tree

Change-Id: I68e908664d24c52657b3a073aae1c8cc41c3ce3e
Reviewed-on: https://gerrit.libreoffice.org/48556
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Muhammet Kara <muhammet.kara@pardus.org.tr>