cui/source/inc/CommandCategoryListBox.hxx
@@ -52,7 +52,8 @@ public:
     void        FillFunctionsList(
                     const css::uno::Sequence< css::frame::DispatchInformation >& xCommands,
                     const VclPtr<SfxConfigFunctionListBox>&  pFunctionListBox,
-                    const OUString& filterTerm );
+                    const OUString& filterTerm,
+                    SaveInData *pCurrentSaveInData = nullptr );
     OUString    MapCommand2UIName(const OUString& sCommand);
 
     /**
@@ -61,14 +62,14 @@ public:
         the commands in the selected category.
     */
     void categorySelected(  const VclPtr<SfxConfigFunctionListBox>&  pFunctionListBox,
-                            const OUString& filterTerm = OUString() );
+                            const OUString& filterTerm = OUString(), SaveInData* pCurrentSaveInData = nullptr );
 
     void                SetStylesInfo(SfxStylesInfo_Impl* pStyles);
 
     // Adds children of the given macro group to the functions list
     void addChildren(
         SvTreeListEntry* parentEntry, const css::uno::Reference<com::sun::star::script::browse::XBrowseNode> &parentNode,
-        const VclPtr<SfxConfigFunctionListBox> &pFunctionListBox, const OUString &filterTerm);
+        const VclPtr<SfxConfigFunctionListBox> &pFunctionListBox, const OUString &filterTerm , SaveInData *pCurrentSaveInData = nullptr );
 };
 
 #endif // INCLUDED_CUI_SOURCE_INC_COMMANDCATEGORYLISTBOX_HXX
